plugins {
    id 'java'
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

javafx {
    version = "17"
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.web', 'javafx.swing', 'javafx.fxml']
}


repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation "${jmonkeyengineGroup}:jme3-core:${jmonkeyengineVersion}"
    implementation 'cn.hutool:hutool-core:5.8.16'

    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'


    implementation 'ch.qos.logback:logback-classic:1.2.3'



}